[gd_scene load_steps=3 format=3 uid="uid://tappopgame"]

[ext_resource type="Script" path="res://scripts/TapPopGame.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/textures/games/tappop/bg_tappop_1080x1920.png" id="2_bg"]

[node name="TapPopGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="BackgroundFallback" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color(0.85, 0.93, 1, 1)

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
texture = ExtResource("2_bg")
expand_mode = 1
stretch_mode = 6

[node name="GameContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopBar" type="HBoxContainer" parent="GameContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="GameContainer/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(56, 56)
text = "<"

[node name="Spacer" type="Control" parent="GameContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WayangMascot" type="AnimatedSprite2D" parent="GameContainer/TopBar"]
layout_mode = 2
custom_minimum_size = Vector2(60, 60)

[node name="HUD" type="HBoxContainer" parent="GameContainer"]
layout_mode = 2
alignment = 1
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="TargetLabel" type="Label" parent="GameContainer/HUD"]
layout_mode = 2
text = "Pop: MERAH"
theme_type_variation = &"HeaderLarge"

[node name="ProgressLabel" type="Label" parent="GameContainer/HUD"]
layout_mode = 2
text = "0/5"
theme_type_variation = &"HeaderLarge"

[node name="GameContent" type="Control" parent="GameContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BalloonContainer" type="Control" parent="GameContainer/GameContent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
